; ModuleID = '/home/carl/AnghaBench/RetroArch/ps2/compat_files/extr_time.c_ps2_time.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ps2/compat_files/extr_time.c_ps2_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32, i32, i32 }

@STARTING_YEAR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ps2_time(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__, align 4
  store i32* %0, i32** %2, align 8
  %5 = call i32 @sceCdReadClock(%struct.TYPE_4__* %4)
  %6 = call i32 @configConvertToLocalTime(%struct.TYPE_4__* %4)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 5
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @DEC(i32 %8)
  %10 = load i64, i64* @STARTING_YEAR, align 8
  %11 = add nsw i64 %9, %10
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 4
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @DEC(i32 %13)
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @DEC(i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @DEC(i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @DEC(i32 %22)
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @DEC(i32 %25)
  %27 = call i32 @_gmtotime_t(i64 %11, i64 %14, i64 %17, i64 %20, i64 %23, i64 %26)
  store i32 %27, i32* %3, align 4
  %28 = load i32*, i32** %2, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %33

30:                                               ; preds = %1
  %31 = load i32, i32* %3, align 4
  %32 = load i32*, i32** %2, align 8
  store i32 %31, i32* %32, align 4
  br label %33

33:                                               ; preds = %30, %1
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @sceCdReadClock(%struct.TYPE_4__*) #1

declare dso_local i32 @configConvertToLocalTime(%struct.TYPE_4__*) #1

declare dso_local i32 @_gmtotime_t(i64, i64, i64, i64, i64, i64) #1

declare dso_local i64 @DEC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
